--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Thomas",
   "license": "MIT",
   "dependencies": {
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
