--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ag-grid-react": "^25.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0"
   },
