--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "keywords": [],
-  "author": "Thomas",
+  "author": "Thomas Hutchinson: Find me at thomashutchinson.dev",
   "license": "MIT",
   "dependencies": {
     "ag-grid-community": "^25.1.0",
